<resources>
    <string name="app_name">Pizza Contest</string>
    <string name="main_text">Pizza Contest</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="cheese_button">\+ cheese</string>
    <string name="restart">restart game</string>
    <string name="the_end">the end</string>
    <string name="to_much_pizza">Do you eat so much?</string>
    <string name="to_much_alco">You\'re drunk!</string>
    <string name="winner_1">Player 1 won!</string>
    <string name="winner_2">Player 2 won!</string>
    <string name="congratulation">Congratulation!</string>
    <string name="remis">Remis!</string>
    <string name="let_s_start">Let\'s start</string>
    <string name="end_of_cheese">X</string>
    <string name="toast_message">First choose pizza</string>

</resources>
